# vidodo

./: .gitignore  LICENSE  README.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  task-card.yml
.github/agents/: rust-quality-gate.agent.md  task-card-executor.agent.md
.github/instructions/: rust-workspace.instructions.md  task-card-flow.instructions.md
.github/workflows/: rust-ci.yml
examples/ambient-drift/: asset-records.json  audio-dsl.json  constraint-set.json  cue-set.json  lighting-topology.json  scene-pack.json  set-plan.json  vidodo-asset-pack.json  visual-dsl.json
examples/full-showcase-comprehensive/: asset-records.json  audio-dsl.json  constraint-set.json  cue-set.json  external-control-event.json  lighting-topology.json  patch-proposal-1.json  patch-proposal-2.json  scene-pack.json  set-plan.json  show-template.json  vidodo-asset-pack.json  visual-dsl.json
examples/live-patch-demo/: asset-records.json  audio-dsl.json  cue-set.json  lighting-topology.json  patch-proposal.json  set-plan.json  vidodo-asset-pack.json  visual-dsl.json
examples/minimal-beat-show/: asset-records.json  audio-dsl.json  constraint-set.json  cue-set.json  lighting-topology.json  set-plan.json  vidodo-asset-pack.json  visual-dsl.json
python/vidodo_analysis/: README.md  __init__.py  __main__.py  audio_analysis.py  cli.py  harmony_analysis.py  midi_analysis.py  requirements.txt
schemas/: README.md
schemas/asset/: asset-record.v0.json  resource-hub-descriptor.v0.json
schemas/capability/: adapter-plugin-manifest.v0.json  authorization-policy.v0.json  capability-descriptor.v0.json
schemas/common/: musical-time.v0.json  provenance.v0.json  response-envelope.v0.json
schemas/deployment/: deployment-profile.v0.json  distributed-node-descriptor.v0.json  transport-contract.v0.json
schemas/ir/: asset-ir.v0.json  display-topology.v0.json  performance-ir.v0.json  route-set.v0.json  speaker-matrix-topology.v0.json  structure-ir.v0.json  timeline-entry.v0.json  view-group.v0.json  visual-ir.v0.json
schemas/lighting/: lighting-topology.v0.json
schemas/mcp-tools/: av-tool-registry.v0.json
scripts/: init-artifact-store.sh  schema-validate.sh  schema_validate.py
vidodo-docs/: 00-视听系统产品包总览.md  04-音频与视觉运行时事件协议与数据结构.md  05-DSL与IR字段定义草案.md  06-资产接入与分析缓存设计.md  08-实时补丁授权与回退策略.md  09-CLI与MCP能力模型与命令语义.md  10-CLI命令清单与MCP工具Schema.md  11-从素材接入到实时补丁回退的端到端示例.md  12-视听联动协议设计书.md  13-产品技术栈决策依据建议书.md  14-MVP技术架构图与Phase0实施清单.md  15-功能模块设计方案总览.md  16-Capability-Layer与命令执行模型详细设计.md  17-资产接入分析与注册表详细设计.md  18-编译版本与校验详细设计.md  19-调度运行时与补丁详细设计.md  20-音频输出模型与外部乐器接入设计.md  21-测试与验证顶层设计方案.md  22-编码前置完备性审计报告.md  26-JSON-Schema完整清单与版本策略.md  README.md
vidodo-src/: Cargo.toml  README.md
vidodo-src/.cargo/: config.toml
vidodo-src/apps/avctl/: Cargo.toml
vidodo-src/apps/avctl/src/: main.rs
vidodo-src/apps/core-service/: Cargo.toml
vidodo-src/apps/core-service/src/: main.rs
vidodo-src/apps/lighting-runtime/: Cargo.toml
vidodo-src/apps/lighting-runtime/src/: lighting_backend.rs  main.rs
vidodo-src/apps/mcp-adapter/: Cargo.toml
vidodo-src/apps/mcp-adapter/src/: main.rs
vidodo-src/apps/visual-runtime/: Cargo.toml
vidodo-src/apps/visual-runtime/src/: main.rs  visual_backend.rs
vidodo-src/assets/shaders/particles-basic/: kernel.json  particles.frag  particles.vert
vidodo-src/crates/adapter-registry/: Cargo.toml
vidodo-src/crates/adapter-registry/src/: example_audio_analyzer.rs  example_visual_executor.rs  lib.rs  loader.rs  persistence.rs
vidodo-src/crates/audio-bridge/: Cargo.toml
vidodo-src/crates/audio-bridge/src/: ack_collector.rs  backend.rs  command_translator.rs  health_monitor.rs  lib.rs  node_mapping.rs  osc.rs  process_manager.rs  server_query.rs  tests.rs
vidodo-src/crates/capability/: Cargo.toml
vidodo-src/crates/capability/src/: lib.rs  policy.rs
vidodo-src/crates/compiler/: Cargo.toml
vidodo-src/crates/compiler/benches/: minimal_compile.rs
vidodo-src/crates/compiler/src/: analysis_cache.rs  lib.rs  revision.rs
vidodo-src/crates/evaluation/: Cargo.toml
vidodo-src/crates/evaluation/src/: lib.rs
vidodo-src/crates/ipc/: Cargo.toml
vidodo-src/crates/ipc/src/: causation.rs  channel.rs  integration_tests.rs  lib.rs  messages.rs  resilience.rs  scheduler_ipc.rs  tests.rs
vidodo-src/crates/ir/: Cargo.toml
vidodo-src/crates/ir/src/: lib.rs
vidodo-src/crates/lighting-bridge/: Cargo.toml
vidodo-src/crates/lighting-bridge/src/: artnet.rs  backend.rs  cue_translator.rs  dmx.rs  fixture_topology.rs  lib.rs  tests.rs
vidodo-src/crates/patch-manager/: Cargo.toml
vidodo-src/crates/patch-manager/src/: lib.rs
vidodo-src/crates/resource-hub/: Cargo.toml
vidodo-src/crates/resource-hub/src/: lib.rs  persistence.rs  resolver.rs
vidodo-src/crates/scheduler/: Cargo.toml
vidodo-src/crates/scheduler/benches/: scheduler_bench.rs
vidodo-src/crates/scheduler/src/: audio_backend.rs  clock.rs  fault_injection.rs  fixture_bus_backend.rs  health_monitor.rs  lib.rs  lighting_backend.rs  lookahead.rs  null_backend.rs  null_control_adapter.rs  patch_window.rs  realtime_clock.rs  realtime_dispatch.rs  reference_backend.rs  scene_manager.rs  scsynth_backend.rs  show_state.rs  transport.rs  visual_backend.rs  wgpu_backend.rs
vidodo-src/crates/scheduler/tests/: stress_harness.rs
vidodo-src/crates/storage/: Cargo.toml
vidodo-src/crates/storage/src/: analysis_bridge.rs  artifact_layout.rs  asset_ingest.rs  lib.rs  query_registry.rs  template_registry.rs
vidodo-src/crates/trace/: Cargo.toml
vidodo-src/crates/trace/src/: lib.rs
vidodo-src/crates/validator/: Cargo.toml
vidodo-src/crates/validator/src/: lib.rs
vidodo-src/crates/visual-bridge/: Cargo.toml
vidodo-src/crates/visual-bridge/src/: backend.rs  buffer_manager.rs  camera_rig.rs  device.rs  lib.rs  particles_tests.rs  render_pipeline.rs  scene_controller.rs  shader.rs  shader_compiler.rs  tests.rs  types.rs  uniform.rs  uniform_automation.rs  viewport_composer.rs  window.rs
vidodo-src/xtask/: Cargo.toml
vidodo-src/xtask/src/: main.rs
(+197 files in other folders)
