[workspace]
members = [
    "apps/avctl",
    "apps/core-service",
    "apps/mcp-adapter",
    "apps/visual-runtime",
    "crates/capability",
    "crates/compiler",
    "crates/evaluation",
    "crates/ir",
    "crates/patch-manager",
    "crates/scheduler",
    "crates/storage",
    "crates/trace",
    "crates/validator",
    "xtask",
]
default-members = ["apps/avctl"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Vidodo Contributors"]
repository = "https://github.com/TheSmallBoat/vidodo"

[workspace.dependencies]
criterion = { version = "0.5", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "forbid"
