[package]
name = "avctl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
vidodo-compiler = { path = "../../crates/compiler" }
vidodo-evaluation = { path = "../../crates/evaluation" }
vidodo-ir = { path = "../../crates/ir" }
vidodo-patch-manager = { path = "../../crates/patch-manager" }
vidodo-scheduler = { path = "../../crates/scheduler" }
vidodo-storage = { path = "../../crates/storage" }
vidodo-trace = { path = "../../crates/trace" }
vidodo-validator = { path = "../../crates/validator" }
