[package]
name = "core-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
vidodo-capability = { path = "../../crates/capability" }
vidodo-ir = { path = "../../crates/ir" }

[dev-dependencies]
tower.workspace = true
