[package]
name = "core-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
vidodo-capability = { path = "../../crates/capability" }
vidodo-compiler = { path = "../../crates/compiler" }
vidodo-evaluation = { path = "../../crates/evaluation" }
vidodo-ir = { path = "../../crates/ir" }
vidodo-patch-manager = { path = "../../crates/patch-manager" }
vidodo-scheduler = { path = "../../crates/scheduler" }
vidodo-storage = { path = "../../crates/storage" }
vidodo-trace = { path = "../../crates/trace" }
vidodo-validator = { path = "../../crates/validator" }

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true
