[package]
name = "lighting-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
vidodo-ir = { path = "../../crates/ir" }
vidodo-storage = { path = "../../crates/storage" }
vidodo-trace = { path = "../../crates/trace" }
