[package]
name = "vidodo-audio-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SuperCollider scsynth bridge for Vidodo audio runtime"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
vidodo-ir = { path = "../ir" }

[dev-dependencies]
serde_json = { workspace = true }
