[package]
name = "vidodo-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde_json.workspace = true
vidodo-ir = { path = "../ir" }
vidodo-storage = { path = "../storage" }
vidodo-validator = { path = "../validator" }

[dev-dependencies]
criterion.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[[bench]]
name = "minimal_compile"
harness = false
