[package]
name = "vidodo-evaluation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
vidodo-ir = { path = "../ir" }
vidodo-storage = { path = "../storage" }
vidodo-trace = { path = "../trace" }
