[package]
name = "vidodo-patch-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
vidodo-ir = { path = "../ir" }

[dev-dependencies]
vidodo-compiler = { path = "../compiler" }
