[package]
name = "vidodo-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
vidodo-ir = { path = "../ir" }

[dev-dependencies]
serde_json.workspace = true
vidodo-compiler = { path = "../compiler" }
vidodo-patch-manager = { path = "../patch-manager" }
