[package]
name = "vidodo-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
vidodo-audio-bridge = { path = "../audio-bridge" }
vidodo-ir = { path = "../ir" }
vidodo-lighting-bridge = { path = "../lighting-bridge" }
vidodo-visual-bridge = { path = "../visual-bridge" }

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true
vidodo-compiler = { path = "../compiler" }
vidodo-patch-manager = { path = "../patch-manager" }

[[bench]]
name = "scheduler_bench"
harness = false
