[package]
name = "vidodo-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
vidodo-ir = { path = "../ir" }
