[package]
name = "vidodo-visual-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "wgpu-based visual rendering bridge for Vidodo visual runtime"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
vidodo-ir = { path = "../ir" }

[dev-dependencies]
serde_json = { workspace = true }
