[package]
name = "vidodo-visual-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "wgpu-based visual rendering bridge for Vidodo visual runtime"

[dependencies]
glam = "0.29"
naga = { version = "24", features = ["glsl-in", "spv-out"] }
serde = { workspace = true }
serde_json = { workspace = true }
vidodo-ir = { path = "../ir" }

[dev-dependencies]
serde_json = { workspace = true }
